# BinMod1D-PARS

./: .readthedocs.yaml  BM1D_analytical_examples.ipynb  README.md  analytical_solutions.py  bin_integrals.py  collection_kernels.py  distribution.py  habits.py  interaction.py  plotting_functions.py  pyproject.toml  spectral_model.py
.ipynb_checkpoints/: BM1D_analytical_examples-checkpoint.ipynb  BM1D_full_1d_examples-checkpoint.ipynb  BM1D_steady_state_examples-checkpoint.ipynb
binmod1d/binmod1d/: plotting_functions.py  spectral_model.py
docs/: binmod1d.rst  conf.py  examples.md  index.rst  installation.rst  introduction.md  modules.rst  tutorials.md
docs/_static/: custom.css
notebooks/: BM1D_analytical_examples.ipynb  BM1D_steady_state_examples.ipynb
notebooks/.ipynb_checkpoints/: BM1D_analytical_examples-checkpoint.ipynb  BM1D_full_1d_examples-checkpoint.ipynb  BM1D_steady_state_examples-checkpoint.ipynb
src/binmod1d/: analytical_solutions.py  bin_integrals.py  collection_kernels.py  distribution.py  habits.py  interaction.py  radar.py  spectral_model.py
tests/: long_convergence_tests.py
