[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "binmod1d"         # must be unique on PyPI
version = "0.1.3"
description = "A 1D Column bin microphysics model that performs collision-coalescence and breakup."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Edwin Lee Dunnavan, RSII Cooperative Institute for Severe and High-Impact Research and Weather Operations (CIWRO)", email="edwin.dunnavan@noaa.gov"}]
license = {text = "MIT"}           # or point to license file
dependencies = [
		"numpy>=2.2.6",
		"mpmath>=1.3.0",
		"scipy>=1.15.3",
		#"joblib>=1.5.1",
		"numba>=0.61.2",
		"matplotlib>=3.10.3",
		"netcdf4>=1.7.2",
		"cmweather>=0.3.2",
		"tqdm>=4.67.1",
		]

# optional:
[project.urls]
"Homepage" = "https://github.com/NOAA-National-Severe-Storms-Laboratory/BinMod1D-PARS"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "myst-parser",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "nbsphinx",
    "ipython"  # often needed for nbsphinx
]

#[tool.setuptools]
# This explicitly sets the content type, although 'readme = "README.md"' often implies it for markdown
#long-description-content-type = "text/markdown" # <--- Crucial for rendering Markdown correctly
